Completed homepage header and css

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,11 +13,13 @@
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
                 <h1 class="display-4 logo-font text-black">
-                    New products are here
+                    <!-- My text -->
+                    New products are in
                 </h1>
                 </div class="my-4">
                     <h4>
-                        <a href="" class="shop-now-button btn btn-sm rounded-0 text-uppercase py-3">Shop</a>
+                    <!-- My href lowercase -->
+                        <a href="" class="shop-now-button btn btn-dark rounded-0 text-lowercase py-3">shop</a>
                     <h4>
                 </div>
             </div>
