--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     {% endblock %}
 
     {% block corecss %}
+    <!-- My text font -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Text:wght@500&display=swap" rel="stylesheet">
@@ -31,26 +32,25 @@
 
     {% block extra_js %}
     {% endblock %}
-
+    <!-- My shop name -->
     <title>Shop My Closet {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
     <header class="container-fluid fixed-top">
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center">
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                <h4 class="logo-font text-black my-0">Shop My Closet<h4>
+                    <h2 class="logo-font text-black my-0">shop My Closet</h2>
                 </a>
             </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center">
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <form method="GET" action="">
                     <div class="input-group w-100">
-                    <!-- My placeholder -->
-                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="search the site">
+                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="search our site">
                         <div class="input-group-append">
-                            <button class="form-control btn btn-blue rounded-0" type="submit">
+                            <button class="form-control btn btn-black border border-black rounded-0" type="submit">
                                 <span class="icon">
-                                    <i class="fas fa search"></i>
+                                    <i class="fas fa-search"></i>
                                 </span>
                             </button>
                         </div>
@@ -63,7 +63,7 @@
                         <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
                                 <div><i class="fas fa-user fa-lg"></i></div>
-                                <p class="my-0">me</p>
+                                <p class="my-0">account</p>
                             </div>
                         </a>
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
@@ -96,7 +96,22 @@
                 </ul>
             </div>
         </div>
+        <div class="row bg-white">
+            <nav class="navbar navbar-expand-lg navbar-light w-100">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                {% include 'includes/mobile-top-header.html' %}
+                {% include 'includes/main-nav.html' %}
+            </nav>
+        </div>
+        <div id="delivery-banner" class="row text-center">
+            <div class="col bg-black text-white">
+                <h4 class="logo-font my-1">Free delivery on orders over £{{ free_shipping_threshold }}!</h4>                
+            </div>            
+        </div>
     </header>
+
 
     {% if messages %}
     <div class="message-container"></div>
