--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,10 +5,21 @@
                 clothing
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">t shirts</a>
-                <a href="" class="dropdown-item">hoodies</a>
-                <a href="" class="dropdown-item">bottoms</a>
-                <a href="" class="dropdown-item">all clothing</a>
+                <a href="" class="dropdown-item">Shirt</a>
+                <a href="" class="dropdown-item">Blouse</a>
+                <a href="" class="dropdown-item">T-Shirt</a>
+                <a href="" class="dropdown-item">Co-ord</a>
+                <a href="" class="dropdown-item">Top</a>
+                <a href="" class="dropdown-item">Coat</a>
+                <a href="" class="dropdown-item">Jacket</a>
+                <a href="" class="dropdown-item">Joggers</a>
+                <a href="" class="dropdown-item">Dress</a>
+                <a href="" class="dropdown-item">Vest</a>
+                <a href="" class="dropdown-item">Suit</a>
+                <a href="" class="dropdown-item">Jumper</a>
+                <a href="" class="dropdown-item">Bottoms</a>
+                <a href="" class="dropdown-item">Hoodie</a>
+                <a href="" class="dropdown-item">Blazer</a>
             </div>
         </li>
 
