Added product details functionality

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,7 +19,7 @@
                 </div class="my-4">
                     <h4>
                     <!-- My href lowercase -->
-                        <a href="" class="shop-now-button btn btn-dark rounded-0 text-lowercase py-3">shop</a>
+                        <a href="{% url 'products' %}" class="shop-now-button btn btn-dark rounded-0 text-lowercase py-3">shop</a>
                     <h4>
                 </div>
             </div>
