--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,6 +5,7 @@
                 clothing
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
+            <!-- My Products -->
                 <a href="" class="dropdown-item">Shirt</a>
                 <a href="" class="dropdown-item">Blouse</a>
                 <a href="" class="dropdown-item">T-Shirt</a>
@@ -20,6 +21,8 @@
                 <a href="" class="dropdown-item">Bottoms</a>
                 <a href="" class="dropdown-item">Hoodie</a>
                 <a href="" class="dropdown-item">Blazer</a>
+                <a href="" class="dropdown-item">Trouser</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
 
