added more sorting

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -19,6 +19,7 @@
             <div class="dropdown-menu border-0" aria-labelledby="trends-link">
                 <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item">by rating</a>
                 <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">by price</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item">by category</a>
             </div>
         </li>
     </ul>
