--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,14 +2,12 @@ html {
     height: 100%;
 }
 
+/* My Body */
 body {
-    /* My image */
     background: url('/media/model1.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
-    /* My colour */
     color: #696969;
-    /* My font choice */
     font-family: 'Big Shoulders Inline Text';
 }
 
@@ -22,8 +20,8 @@ body {
     width: 1.5rem;
 }
 
+/* My logo-font */
 .logo-font {
-    /* My font choice */
     text-transform: lowercase;
 }
 
@@ -31,35 +29,58 @@ body {
     width: fit-content;
 }
 
-/* My button */
+/* My shop-now-button */
 .shop-now-button {
     background:white;
     color: #696969;
     min-width: 80px;
 }
 
-.btn-black {
-    background: black;
+/* My text-grey button */
+.btn-grey {
+    background: #696969;
     color: white;
 }
 
+/* My btn */
+.btn-outline-black {
+    background: white;
+    color: #696969 !important; /* use important to override link colors for <a> elements */
+    border: 1px solid #696969;
+}
+
+/* My btn */
+.btn-outline-black:hover,
+.btn-outline-black:active,
+.btn-outline-black:focus {
+    background: #696969;
+    color: white !important;
+}
+
+/* My btn */
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus,
 .btn-black:hover,
 .btn-black:active,
 .btn-black:focus {
-    background: #222;
+    background: #696969;
     color: white;
 }
 
-/* My text  */
+/* My text-grey */
 .text-grey {
     color: #696969 !important;
 }
 
-.border-black {
-    border: 1px solid black !important;
+/* My boarder-grey */
+.border-grey {
+    border: 1px solid #696969 !important;
+}
+
+/* My bg-grey */
+.bg-grey {
+    background: #696969 !important;
 }
 
 .overlay {
@@ -72,10 +93,11 @@ body {
 	z-index: -1;
 }
 
-/* a.category-badge > span.badge:hover {
-    background: #212529 !important;
+/* My a.category-badge */
+a.category-badge > span.badge:hover {
+    background: #696969 !important;
     color: #fff !important;
-}*/
+}
 
 .btt-button {
     height: 42px;
