--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -46,6 +46,19 @@
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
+                            {% with product.has_sizes as s %}
+                            {% if s %}
+                                <div class="col-12">
+                                    <p><strong>Size:</strong></p>
+                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_product_size'>
+                                        <option value="xs">XS</option>
+                                        <option value="s">S</option>
+                                        <option value="m" selected>M</option>
+                                        <option value="l">L</option>
+                                        <option value="xl">XL</option>
+                                    </select>
+                                </div>
+                            {% endif %}
                             <div class="col-12">
                                 <p class="mt-3"><strong>Quantity:</strong></p>
                                 <div class="form-group w-50">
@@ -55,7 +68,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-12">
+                            <div class="col{% if s %}-12 mt-2{% endif %}">
                                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
@@ -67,6 +80,55 @@
                                 <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                            {% endwith %}
+                            <!-- My Reviews -->
+                            
+                            <br>
+
+                            <hr>
+
+                            <h2 class="subtitle">Reviews</h2>
+
+                            <div class="reviews-wrapper">
+                                {% for review in product.reviews.all %}
+                                    <div class="notification">
+                                        <p>
+                                            <strong>Date: </strong>{{ review.date_added|date:"D-m-y" }}<br>
+                                            <strong>Stars: </strong>{{ review.stars }}
+                                        </p>
+
+                                    {{ review.content }}
+                                    </div>
+                                {% empty %}
+                                    <div class="notification">
+                                        No reviews yet...
+                                    </div>
+
+                                    <div class="notification">
+                                        {% if request.user.is_authenticated %}
+                                            <form method="post" action=".">
+                                                {% csrf token %}
+
+                                                <div class="field">
+                                                    <label>Stars</label>
+
+                                                    <div class="control">
+                                                        <div class="select">
+                                                            <select name="stars">
+                                                                <option value="1">1</option>
+                                                                <option value="2">2</option>
+                                                                <option value="3">3</option>
+                                                                <option value="4">4</option>
+                                                                <option value="5">5</option>
+                                                            </select>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                        {% endif %}
+                                    </div>
+                                
+                                {% endfor %}
+                            </div>
                         </div>
                     </form>
                 </div>
