--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -77,7 +77,7 @@
                                     <span class="text-uppercase">Carry on
                                     shopping</span>
                                 </a>
-                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5 space-below" value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             {% endwith %}
@@ -87,11 +87,11 @@
 
                             <hr>
 
-                            <h2 class="subtitle">Reviews</h2>
+                            <h2 class="subtitle space-below">Reviews</h2>
 
                             <div class="reviews-wrapper">
                                 {% for review in product.reviews.all %}
-                                    <div class="notification">
+                                    <div class="notification space-below">
                                         <p>
                                             <strong>Date: </strong>{{ review.date_added|date:"D-m-y" }}<br>
                                             <strong>Stars: </strong>{{ review.stars }}
@@ -100,14 +100,14 @@
                                     {{ review.content }}
                                     </div>
                                 {% empty %}
-                                    <div class="notification">
+                                    <div class="notification space-below">
                                         No reviews yet...
                                     </div>
 
-                                    <div class="notification">
+                                    <div class="notification space-below">
                                         {% if request.user.is_authenticated %}
                                             <form method="post" action=".">
-                                                {% csrf token %}
+                                                {% csrf_token %}
 
                                                 <div class="field">
                                                     <label>Stars</label>
@@ -121,9 +121,26 @@
                                                                 <option value="4">4</option>
                                                                 <option value="5">5</option>
                                                             </select>
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                                <div class="field">
+                                                    <label>Content</label>
+
+                                                    <div class="control">
+                                                        <textarea class="tex area" name="content"></textarea>
+                                                    </div>
+                                                </div>
+
+                                                <div class="field">
+                                                    <div class="control">
+                                                        <button class="button is-success">Submit</button>
                                                     </div>
                                                 </div>
                                             </form>
+                                        {% else %}
+                                            <p>Please sign in to add your review!</p>
                                         {% endif %}
                                     </div>
                                 
