--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -63,7 +63,26 @@
                                 <p class="mt-3"><strong>Quantity:</strong></p>
                                 <div class="form-group w-50">
                                     <div class="input-group">
-                                        <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty btn btn-black rounded-0" 
+                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-minus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <input class="form-control qty_input" type="number"
+                                            name="quantity" value="1" min="1" max="99"
+                                            data-item_id="{{ product.id }}"
+                                            id="id_qty_{{ product.id }}">
+                                        <div class="input-group-append">
+                                            <button class="increment-qty btn btn-black rounded-0"
+                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-plus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -73,83 +92,21 @@
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
                                     </span>
-                                    <!-- My carry on shopping -->
-                                    <span class="text-uppercase">Carry on
-                                    shopping</span>
+                                    <span class="text-uppercase">Keep Shopping</span>
                                 </a>
-                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5 space-below" value="Add to Bag">
+                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             {% endwith %}
-                            <!-- My Reviews -->
-                            
-                            <br>
-
-                            <hr>
-
-                            <h2 class="subtitle space-below">Reviews</h2>
-
-                            <div class="reviews-wrapper">
-                                {% for review in product.reviews.all %}
-                                    <div class="notification space-below">
-                                        <p>
-                                            <strong>Date: </strong>{{ review.date_added|date:"D-m-y" }}<br>
-                                            <strong>Stars: </strong>{{ review.stars }}
-                                        </p>
-
-                                    {{ review.content }}
-                                    </div>
-                                {% empty %}
-                                    <div class="notification space-below">
-                                        No reviews yet...
-                                    </div>
-
-                                    <div class="notification space-below">
-                                        {% if request.user.is_authenticated %}
-                                            <form method="post" action=".">
-                                                {% csrf_token %}
-
-                                                <div class="field">
-                                                    <label>Stars</label>
-
-                                                    <div class="control">
-                                                        <div class="select">
-                                                            <select name="stars">
-                                                                <option value="1">1</option>
-                                                                <option value="2">2</option>
-                                                                <option value="3">3</option>
-                                                                <option value="4">4</option>
-                                                                <option value="5">5</option>
-                                                            </select>
-                                                        </div>
-                                                    </div>
-                                                </div>
-
-                                                <div class="field">
-                                                    <label>Content</label>
-
-                                                    <div class="control">
-                                                        <textarea class="tex area" name="content"></textarea>
-                                                    </div>
-                                                </div>
-
-                                                <div class="field">
-                                                    <div class="control">
-                                                        <button class="button is-success">Submit</button>
-                                                    </div>
-                                                </div>
-                                            </form>
-                                        {% else %}
-                                            <p>Please sign in to add your review!</p>
-                                        {% endif %}
-                                    </div>
-                                
-                                {% endfor %}
-                            </div>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
